# DeepMentor

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup_project.py
.gradio/flagged/: dataset1.csv
deepmentor/: __init__.py  config.py  data_loader.py  main.py  tester.py
docs/: DeepMentorFlow.html  crewai_flow_script.js
flows/deepmentor_flow/: README.md  pyproject.toml
flows/deepmentor_flow/crews/teaching_crew/: teaching_crew.py  teaching_crew_backup.py
flows/deepmentor_flow/crews/teaching_crew/config/: agents.yaml  tasks.yaml
flows/deepmentor_flow/crews/teaching_crew/knowledge/: d2l-ocr.json
flows/deepmentor_flow/tools/: custom_tool.py
knowledge/: chapter-3.json
notebooks/: crewai_experiments.ipynb  deepmentor_iterativo.ipynb
