[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deepmentor"
version = "0.0.1"
description = "O DeepMentor \u00e9 um sistema inteligente de tutoria adaptativa que utiliza uma arquitetura multi-agente inspirada no m\u00e9todo socr\u00e1tico de ensino para promover aprendizado personalizado em t\u00f3picos avan\u00e7ados de Deep Learning. Diferentemente de chatbots convencionais baseados apenas em Retrieval-Augmented Generation (RAG), o DeepMentor \u00e9 capaz de planejar trajet\u00f3rias de ensino, avaliar o n\u00edvel de compreens\u00e3o do aluno e ajustar dinamicamente o conte\u00fado conforme o perfil cognitivo e motivacional detectado."
authors = [
  { name = "Hiuri Noronha" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["deepmentor"]
include = ["pyproject.toml", "deepmentor/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["deepmentor"]
force-sort-within-sections = true

